# HWPtoHWPX

./: .gitignore  3.과업지시서_070.hwp  3.과업지시서_070.hwpx  4.제안요청서_070.hwp  4.제안요청서_070.hwpx  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-16-charpr-fidelity.md  2026-07-16-drawing-objects-lines.md  2026-07-16-drawing-objects-pictures.md  2026-07-16-header-doc-settings.md  2026-07-16-hwp-to-hwpx-converter.md  2026-07-16-linesegarray.md  2026-07-16-parapr-fidelity.md  2026-07-16-real-styles.md  2026-07-16-real-tabs.md  2026-07-16-section-inline.md  (+16 more)
hwp2hwpx/: cli.py  constants.py  convert.py  runner.py
hwp2hwpx/fidelity/: diff.py  xmlnorm.py
hwp2hwpx/hwpmodel/: bindata.py  model.py  rangetags.py  reader.py  source.py  summary.py
hwp2hwpx/mapper/: body.py  border_fill.py  borderfill_null.py  bullet.py  char_pr.py  docsettings.py  drawing.py  fonts.py  markpen.py  numbering.py  para_pr.py  section.py  style.py  tab.py  table.py
hwp2hwpx/owpml/: header_writer.py  model.py  package_parts.py  section_writer.py  writer.py
samples/: test_document.hwp  test_document.hwpx
scripts/: capture_fixture.py
tests/: conftest.py  fidelity_struct.py  samplepaths.py  test_bindata.py  test_bindata_renumber.py  test_borderfill_null.py  test_borderfill_null_fidelity.py  test_char_shape_resolver.py  test_charpr_borderfill.py  test_charpr_borderfill_fidelity.py  test_cli.py  test_container_rdf.py  test_content_hpf_meta.py  test_convert_bullets.py  test_convert_charpr.py  test_convert_container.py  test_convert_docsettings.py  test_convert_endtoend.py  test_convert_gradation.py  test_convert_inline.py  test_convert_inline_ctrls.py  test_convert_inline_t.py  test_convert_line.py  test_convert_lineseg.py  test_convert_markpen.py  test_convert_numbering.py  test_convert_page_hiding.py  test_convert_parapr.py  test_convert_picture.py  test_convert_rect.py  test_convert_secpr.py  test_convert_styles.py  test_convert_subscript.py  test_convert_tables.py  test_convert_tabs.py  test_convert_tail.py  test_convert_trailing_run.py  test_fidelity_diff.py  test_fresh_clone.py  test_header_borderfills.py  (+92 more)
tests/fixtures/: sample3.hwp5.xml
(+26 files in other folders)
