[project]
name = "hwp2hwpx"
version = "0.1.0"
description = "Convert Hangul Word Processor (HWP 5.0) documents to HWPX (OWPML)"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Byeong Kwon Kwak", email = "bk.kwak@gmail.com" }]
keywords = ["hwp", "hwpx", "owpml", "hancom", "document-conversion", "korean"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: XML",
]
# six: pyhwp imports it from hwp5.dataio and hwp5.binmodel.* -- the in-process
# read path -- but does not declare it (its metadata requires only cryptography,
# lxml and olefile).
dependencies = ["lxml>=5", "pyhwp>=0.1b15", "six"]

[project.urls]
Homepage = "https://github.com/Steven-A3/HWPtoHWPX"
Repository = "https://github.com/Steven-A3/HWPtoHWPX"
Issues = "https://github.com/Steven-A3/HWPtoHWPX/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hwp2hwpx = "hwp2hwpx.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["hwp2hwpx*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
